# Animation-Calibrator

./: .gitignore  CMakeLists.txt  README
VS2010/: Animation-Calibrator.sln  Animation-Calibrator.vcxproj  Animation-Calibrator.vcxproj.filters  premake4.lua  run.frames
XCode/: Animation-Calibrator  premake4.lua
XCode/Animation-Calibrator.xcodeproj/: project.pbxproj
XCode/Animation-Calibrator.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XCode/Animation-Calibrator.xcodeproj/project.xcworkspace/xcuserdata/tgashby.xcuserdatad/: UserInterfaceState.xcuserstate
XCode/Animation-Calibrator.xcodeproj/xcuserdata/tgashby.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
XCode/Animation-Calibrator.xcodeproj/xcuserdata/tgashby.xcuserdatad/xcschemes/: Animation-Calibrator.xcscheme  xcschememanagement.plist
docs/: Estimate.ods  animationCalibrator.tlg
include/: Animation.h  AnimationManager.h  InputManager.h  Keys.h  ProjIncludes.h  SDLIncludes.h  Texture.h  TextureManager.h
include/TGAEngine/: Singleton.h
lib/TGAEngine/: TGAEngine.lib
lib/sdl-1.3/.hg/: dirstate  thgstatus
lib/sdl-1.3/.hg/cache/: branchheads  tags
lib/sdl-1.3/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
lib/sdl-1.3/.hg/store/data/: configure.in.d  configure.in.i
lib/sdl-1.3/.hg/store/data/_visual_c/_s_d_l/: _s_d_l___v_s2005.vcproj.i  _s_d_l___v_s2008.vcproj.i  _s_d_l___v_s2010.vcxproj.i
lib/sdl-1.3/.hg/store/data/_xcode-i_phone_o_s/_s_d_l/_s_d_li_phone_o_s.xcodeproj/: project.pbxproj.i
lib/sdl-1.3/.hg/store/data/include/: _s_d_l__config.h.in.i  _s_d_l__hints.h.i  _s_d_l__quit.h.i  _s_d_l__syswm.h.i
lib/sdl-1.3/.hg/store/data/src/: _s_d_l__hints.c.i
lib/sdl-1.3/.hg/store/data/src/atomic/: _s_d_l__spinlock.c.i
lib/sdl-1.3/.hg/store/data/src/audio/: _s_d_l__sysaudio.h.i
lib/sdl-1.3/.hg/store/data/src/audio/android/: _s_d_l__androidaudio.c.i
lib/sdl-1.3/.hg/store/data/src/events/: _s_d_l__quit.c.i
lib/sdl-1.3/.hg/store/data/src/joystick/linux/: _s_d_l__sysjoystick.c.i
lib/sdl-1.3/.hg/store/data/src/render/opengl/: _s_d_l__render__gl.c.i
lib/sdl-1.3/.hg/store/data/src/render/software/: _s_d_l__render__sw.c.i
lib/sdl-1.3/.hg/store/data/src/video/: _s_d_l__sysvideo.h.i  _s_d_l__video.c.d  _s_d_l__video.c.i
lib/sdl-1.3/.hg/store/data/src/video/cocoa/: _s_d_l__cocoawindow.m.i
lib/sdl-1.3/.hg/store/data/src/video/quartz/: _s_d_l___quartz_video.m.i
lib/sdl-1.3/.hg/store/data/src/video/uikit/: _s_d_l__uikitappdelegate.m.i  _s_d_l__uikitvideo.m.i  _s_d_l__uikitwindow.m.i
lib/sdl-1.3/.hg/store/data/src/video/x11/: _s_d_l__x11modes.c.i  _s_d_l__x11opengl.c.i  _s_d_l__x11opengl.h.i
lib/sdl-1.3/VisualC/SDL/: SDL_VS2005.vcproj  SDL_VS2008.vcproj  SDL_VS2010.vcxproj
lib/sdl-1.3/VisualC/SDL/Win32/Release/: CL.read.1.tlog  CL.write.1.tlog  SDL.exp  SDL.lib  SDL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
lib/sdl-1.3/VisualC/SDLmain/Win32/Release/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SDLmain.lastbuildstate  SDLmain.lib  cl.command.1.tlog  lib.command.1.tlog
lib/sdl-1.3/VisualCE/SDL/: SDL.vcp
lib/sdl-1.3/Win32/: CL.read.1.tlog  CL.write.1.tlog  SDL.exp  SDL.lastbuildstate  SDL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
src/: Animation.cpp  AnimationCalibrator.cpp  AnimationManager.cpp  InputManager.cpp  Texture.cpp  TextureManager.cpp
